# Project-Agent-Hackaton-Microsoft

./: .gitignore  CODE_OF_CONDUCT.md  README.md
agent-finance-personal/: .env_test  pyproject.toml
agent-finance-personal/src/handler/: __init__.py
agent-finance-personal/src/handler/agent/: main.py
agent-finance-personal/src/handler/agent/tools/: TransactionPlugin.py
agent-finance-personal/src/handler/controllers/: handler_controller.py
app-finance-personal/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app-finance-personal/src/: App.css  App.tsx  index.css
app-finance-personal/src/components/: Layout.tsx
app-finance-personal/src/pages/: Dashboard.tsx  Home.tsx  SplashScreen.tsx  TransactionHistory.tsx
app-finance-personal/src/services/: transactionService.ts
app-finance-personal/src/store/: index.ts
app-finance-personal/src/store/slices/: speechSlice.ts  transactionsSlice.ts
